src/test/deca/context/invalid/self/classNull.deca
class A extends B{

}

{
    A a = new A();
}